# cutmaster-ai

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SURFACE.md  install.py  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/agents/: colorist.md  producer.md  reviewer.md
.claude/skills/add-tool/: SKILL.md
.claude/skills/add-workflow/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/test-mcp/: SKILL.md
.claude/skills/update-skills/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: changelog-check.yml  ci.yml  publish.yml
Implementation/cutmaster_ai/v4/: proposal.md
Implementation/optimizaiton/: autodetect-cascade.md
agents/: colorist.md  conform.md  delivery.md  editor.md  producer.md  sound.md  vfx.md
apps/: README.md
apps/panel/: README.md  package-lock.json  package.json  vite.config.ts
apps/panel/scripts/: replay-fixtures.ts
apps/panel/src/: App.tsx  api.ts  axes.ts  design-tokens.css  fonts.css  globals.d.ts  main.tsx  persist.ts  sensory.ts  styles.css  types.ts  useBuildProgress.ts  useSSE.ts
apps/resolve-plugin/: README.md  index.html  manifest.xml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  CUTMASTER_ARCHITECTURE.md  CUTMASTER_SETUP.md  MCP_TOOLS.md  SETUP.md  TELEMETRY.md  THREE_AXIS_MODEL.md  autodetect-fixtures.md  axis-resolution-fixtures.md
docs/internal/: ANALYSIS.md
launchd/: com.celavii.resolve-mcp.plist
panel/: README.md  index.html  package.json  vite.config.ts
panel/resolve-plugin/: README.md  manifest.xml
panel/src/: App.tsx  api.ts  persist.ts  styles.css  types.ts
panel/src/screens/: AnalyzeScreen.tsx  ConfigureScreen.tsx  PresetPickScreen.tsx  ReviewScreen.tsx
scripts/: build-plugin.sh  check_changelog_surface_entry.py  coherence_baseline_capture.py  dump_surface.py  gen_tool_docs.py  install.py  package.sh  setup.sh
scripts/launchd/: ai.cutmaster.mcp.plist
skills/assembly/: SKILL.md
skills/color-assist/: SKILL.md
skills/conform/: SKILL.md
skills/deliver/: SKILL.md
skills/export-stills/: SKILL.md
skills/grade-log/: SKILL.md
skills/ingest/: SKILL.md
skills/preflight/: SKILL.md
skills/review/: SKILL.md
src/celavii_resolve/: __init__.py  __main__.py  config.py  constants.py  errors.py  licensing.py  logging_setup.py  lut_registry.py  plugins.py  resolve.py  resources.py
src/celavii_resolve/ai/: color_assist.py  timeline_critique.py  vision.py
src/celavii_resolve/cutmaster/: __init__.py  assembled.py  (+26 more)
src/cutmaster_ai/: __init__.py  __main__.py  config.py  errors.py  licensing.py  logging_setup.py  plugins.py  resolve.py
tests/: surface_snapshot.json  test_conventions.py  test_errors.py  test_helpers.py  test_imports.py  test_installer.py  test_logging_setup.py  test_phase4.py  test_plugins.py
tests/cutmaster/: test_assembled.py  test_audio_cues.py  test_autodetect_cascade.py  test_autodetect_fixtures.py  test_axis_compat.py  test_axis_fixtures.py  test_axis_resolution.py  test_boundary_validator.py  test_captions.py  test_clip_hunter.py  test_content_profiles.py  test_cut_intents.py  test_director_assembled.py  test_director_curated.py  test_director_prompt.py  test_director_resolved_axes.py  test_director_shot_tags.py  test_director_validation.py  test_excludes.py  test_execute.py  test_formats.py  test_frame_math.py  test_groups.py  test_llm_helper.py  test_panel_axes_parity.py  test_per_clip_stt.py  test_preset_mode_compat.py  test_presets.py  test_resolve_segments.py  test_run_cancel_and_timeouts.py  test_scrubber.py  test_sensory_layers_by_axes.py  test_sensory_telemetry.py  test_short_generator.py  test_shot_color_painter.py  test_shot_metadata_stamper.py  test_shot_tagger.py  test_shot_tagger_canonical_read.py  test_source_mapper.py  test_speaker_reconcile.py  (+9 more)
tests/panel/: test_critique_route.py  test_curated_rough_cut_routes.py  test_cutmaster_routes.py  test_debug_route.py  test_panel_smoke.py  test_phase4_routes.py  test_runs_endpoints.py  test_story_critic_routes.py
(+212 files in other folders)
